Bug 260748 - hidden cards are'nt hidden for suits.
Summary: hidden cards are'nt hidden for suits.
Status: RESOLVED FIXED
Alias: None
Product: kpat
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Slackware Linux
: NOR normal
Target Milestone: ---
Assignee: Parker Coates
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-20 00:09 UTC by Christophe NINUCCI
Modified: 2011-01-08 20:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christophe NINUCCI 2010-12-20 00:09:41 UTC
Version:           unspecified (using KDE 4.5.4) 
OS:                Linux

In games that allow to move suits (tested in klondike and spider), when a visible card is suited to an hidden card, the suit is movable. (kpat version 3.4)

Reproducible: Always

Steps to Reproduce:
on klondike, game 652251058, you can drag the hidden card under the 9 visible on the forth column.
you could even drop this hidden card on an jacket if there was one (it's a black ten .. move the red nine to discover it ;).

Actual Results:  
hidden card is drag-able like a visible one.

Expected Results:  
the card should not be drag-able.

I think this is related to suits management that don't care enough about card's status.
Comment 1 Parker Coates 2010-12-20 15:28:33 UTC
Good find! I'm sure we're just missing a "card->isFaceUp()" check somewhere. This should hopefully be easy to fix.
Comment 2 Parker Coates 2011-01-08 20:49:46 UTC
SVN commit 1212958 by coates:

Do more thorough checking for face down cards before allowing moves.

BUG:260748

 M  +8 -5      dealer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1212958
Comment 3 Parker Coates 2011-01-08 20:51:36 UTC
SVN commit 1212959 by coates:

Backport of commit 1212958.

Do more thorough checking for face down cards before allowing moves.

CCBUG:260748


 M  +8 -5      dealer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1212959