Do more thorough checking for face down cards before allowing moves.

BUG:260748

svn path=/trunk/KDE/kdegames/kpat/; revision=1212958